added readme; minor fixes

--- a/src/styles/blocks/greetings.scss
+++ b/src/styles/blocks/greetings.scss
@@ -1,6 +1,6 @@
 .greetings {
     min-height: 100vh;
-    background-image: url(/images/laptop.jpg);
+    background-image: url(../../images/laptop.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
