--- a/src/styles/blocks/tech.scss
+++ b/src/styles/blocks/tech.scss
@@ -45,33 +45,33 @@
     background-size: contain;
 
     &:nth-child(1) {
-        background-image: url(/images/tech/html5.svg);
+        background-image: url(../../images/tech/html5.svg);
     }
     &:nth-child(2) {
-        background-image: url(/images/tech/css3.svg);
+        background-image: url(../../images/tech/css3.svg);
     }
     &:nth-child(3) {
-        background-image: url(/images/tech/javascript.svg);
+        background-image: url(../../images/tech/javascript.svg);
     }
     &:nth-child(4) {
-        background-image: url(/images/tech/sass.svg);
+        background-image: url(../../images/tech/sass.svg);
     }
     &:nth-child(5) {
-        background-image: url(/images/tech/git.svg);
+        background-image: url(../../images/tech/git.svg);
     }
     &:nth-child(6) {
-        background-image: url(/images/tech/bootstrap.svg);
+        background-image: url(../../images/tech/bootstrap.svg);
     }
     &:nth-child(7) {
-        background-image: url(/images/tech/gulp.svg);
+        background-image: url(../../images/tech/gulp.svg);
     }
     &:nth-child(8) {
-        background-image: url(/images/tech/react.svg);
+        background-image: url(../../images/tech/react.svg);
     }
     &:nth-child(9) {
-        background-image: url(/images/tech/bem.svg);
+        background-image: url(../../images/tech/bem.svg);
     }
     &:nth-child(10) {
-        background-image: url(/images/tech/jquery.svg);
+        background-image: url(../../images/tech/jquery.svg);
     }
 }
