--- a/src/components/App/index.module.scss
+++ b/src/components/App/index.module.scss
@@ -1,6 +1,7 @@
 .app {
-    width: 60%;
+    width: 50%;
     margin: 0 auto;
     border: 1px solid #ccc;
     padding: 30px;
+    margin-top: 30px;
 }
