--- a/src/components/App/index.module.scss
+++ b/src/components/App/index.module.scss
@@ -1,7 +1,12 @@
 .app {
-    width: 50%;
+    width: 60%;
     margin: 0 auto;
     border: 1px solid #ccc;
     padding: 30px;
     margin-top: 30px;
+
+    @media screen and (max-width: 1300px) {
+        width: 90%;
+        padding: 12px;
+    }
 }
